# piccaccel-lnx

./: .gitignore  Cargo.toml  push.sh  remote_enable_timeupdate.sh
accel-daemon/: Cargo.toml
accel-daemon/src/: accel.rs  main.rs  net.rs
accel-data/: Cargo.toml
accel-data/src/: lib.rs  net.rs
adxl355-rs/: Cargo.toml
adxl355-rs/src/: conf.rs  lib.rs  register.rs
dash-wind-streaming/: app.py  requirements.txt
demo-server/: Cargo.toml
demo-server/src/: main.rs  net.rs
python-client/: app_tcp.py  app_wsock.py  nc_thread.py  plot_nc.py  requirements.txt  tcp_thread.py
python-demo/: client.py  server.py
