[package]
name = "accel-daemon"
version = "0.0.1"
edition = "2024"

[dependencies]
adxl355 = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
embedded-hal = { version = "1.0", default-features = false }
env_logger = { version = "0.11" }
futures-channel = { version = "0.3" }
futures-util = { version = "0.3" }
log = { version = "0.4" }
rppal = { version = "0.22", default-features = false, features = ["embedded-hal"] }
tokio = { version = "1.40", features = [
    "time",
    "rt",
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
    "net",
    "io-util",
], default-features = false }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
