[package]
name = "adxl355"
edition = "2018"
authors = ["Jitter"]
description = "A platform agnostic driver to interface with the ADXL355 (accelerometer) through SPI"
documentation = "https://docs.rs/adxl355"
keywords = ["embedded-hal-driver", "accelerometer", "MEMS", "analog-devices"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JitterCompany/adxl355-rs"
categories  = ["embedded", "hardware-support", "no-std"]
version = "0.2.3"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[dependencies]
embedded-hal = "1.0"
accelerometer = "0.12.0"
