[package]
name = "demo-server"
version = "0.1.0"
edition = "2024"

[dependencies]
micromath = { version = "1.1", features = ["vector"] }
clap = { version = "4.5", features = ["derive"] }
embedded-hal = { version = "1.0", default-features = false }
env_logger = { version = "0.11" }
futures-channel = { version = "0.3" }
futures-util = { version = "0.3" }
lazy_static = "1.5"
log = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = [
    "time",
    "rt",
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
    "net",
    "io-util",
], default-features = false }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
