[package]
name = "demo-server"
version = "0.1.0"
edition = "2024"

[dependencies]
accel-data = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
env_logger = { version = "0.11" }
futures-channel = { version = "0.3" }
futures-util = { version = "0.3" }
log = { version = "0.4" }
tokio = { version = "1.40", features = [
    "time",
    "rt",
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
    "net",
    "io-util",
], default-features = false }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
